<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/dimen_layout_margin_8dp"
    tools:context=".ui.less5.GitHubTab">

    <EditText
        android:id="@+id/name_user_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nameEnglish" />

    <Button
        android:id="@+id/find_user_button_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find" />

    <Button
        android:id="@+id/clear_button_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_base" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>