<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    android:id="@+id/transition_position"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/image_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/amazonka"
                    app:layout_collapseMode="parallax" />

            <LinearLayout
                android:id="@+id/minus_hp_bot_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/minus_hp"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="gone">

                <TextView
                    android:id="@+id/text_minus_hp_amazonka"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_header_text_32sp"
                    tools:text="-25" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/hp_amazonka_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:progress="100"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_profile"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_change_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/change_data_profile"
                        android:visibility="gone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_layout_margin_8dp"
                        android:padding="@dimen/dimen_layout_margin_8dp"
                        android:text="Бой с Амазонкой"
                        android:textColor="#000000"
                        android:textSize="@dimen/dimen_body_text_24sp" />

                    <TextView
                        android:id="@+id/name_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_layout_margin_8dp"
                        android:background="@color/teal_200"
                        android:padding="@dimen/dimen_layout_margin_8dp"
                        android:textColor="#000000"
                        android:textSize="@dimen/dimen_body_text_24sp"
                        tools:text="name" />

                    <ProgressBar
                        android:id="@+id/hp_im_progress_bar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:progress="100"
                        android:progressTint="@color/minus_hp" />

                    <TextView
                        android:id="@+id/age_person"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_layout_margin_8dp"
                        android:background="@color/teal_200"
                        android:padding="@dimen/dimen_layout_margin_8dp"
                        android:textColor="#000000"
                        android:textSize="@dimen/dimen_text_text_16sp"
                        tools:text="age" />

                    <TextView
                        android:id="@+id/power_person"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_layout_margin_8dp"
                        android:background="@color/teal_200"
                        android:padding="@dimen/dimen_layout_margin_8dp"
                        android:textColor="#000000"
                        android:textSize="@dimen/dimen_text_text_16sp"
                        tools:text="power" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_new_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_layout_margin_8dp"
                        android:hint="@string/new_name"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/minus_power_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_layout_margin_8dp"
                        android:text="@string/heath" />

                    <Button
                        android:id="@+id/fight_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_layout_margin_8dp"
                        android:text="@string/hit" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/minus_hp_im_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/minus_hp"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="gone">
                <TextView
                    android:id="@+id/text_minus_hp_im"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_header_text_32sp"
                    tools:text="-25" />
            </LinearLayout>
        </FrameLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/go_games"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:src="@drawable/ic_flag"
        app:layout_anchor="@id/main_appbar"
        app:layout_anchorGravity="bottom|right|end"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
